--- a/main.css
+++ b/main.css
@@ -17,6 +17,16 @@ body
     margin-right:auto;  
     background-color: #FFFFFF; 
 }
+
+
+#logo {
+    left: 300px;
+    position: relative;
+    
+}
+
+
+
 ul 
 {
     list-style-type: none;
@@ -74,7 +84,7 @@ ul li ul li a {
 } 
 
 header{
-   display: block;
+    display: block;
     background-color: black;
     color: white;
     padding:20px;
@@ -116,7 +126,7 @@ hr{
     border-color: #ccc;
 }
 .mainFooter{
-margin-top: 100px;
+    margin-top: 100px;
     background-color: black;
     color: white;
 }
