logo og litt små sndringer

--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ ul li ul li a {
 
 header{
     display: block;
-    background-color: black;
+    background-color: white;
     color: white;
     padding:20px;
     
