bilde, farge etc

--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ ul
     margin: 0px;
     padding: 10px;
     overflow: hidden;
-    background-color: #333;
+    background-color: gray;
 }
 
 li{
