--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ article{
 hr{
     margin 50px;
     clear:both;
-    border-color: darkorange;
+    border-color: #ff8c00;
 }
 .mainFooter{
     margin-top: 100px;
