--- a/main.css
+++ b/main.css
@@ -23,23 +23,23 @@ body {
 }
 
 .logoer{
-    position: relative;
+    position: absolute;
     top: 245px;
 }
 
 #facelogo {
     width: 50px;
-    right: 300px;
+    right: 390px;
 }
 
 #twitterlogo {
     width: 30px;
-    right: 250px;
+    right: 350px;
 }
 
 #instalogo {
     width: 30px;
-    right: 200px;
+    right: 300px;
 }
 
 header {
@@ -72,9 +72,11 @@ li a {
     text-decoration: none;
 }
 
+
 li a:hover {
     background-color: #111;
 }
+
 
 ul li {
     display: inline-block;
@@ -117,6 +119,7 @@ ul li ul li a {
     width: 30%;
         
 }*/
+
 
 .mainContent {
     margin: 0 100px;
