--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/*body {
+body {
     background-color: white;
     font-family: Arial, Verdana, Comic Sans;
     text-align: left;
@@ -16,7 +16,7 @@
     margin-right: auto;
     background-color: #FFFFFF;
 }*/
-/*
+
 #logo {
     left: 300px;
     position: relative;
