--- a/main.css
+++ b/main.css
@@ -24,6 +24,92 @@ body {
     margin: 0 auto;
 }
 
+
+/******* NAV BAR **********/
+
+nav{
+    margin-bottom: -25px;
+    text-align: center;
+}
+
+ul{
+display: block;
+    list-style-type: none;
+    padding-top: -45px;
+    margin: 0;
+    overflow: hidden;
+    background-color: black;
+    
+}
+
+li{
+    display: inline-block;
+    /*float: left;*/
+    /*margin-left: 10px;*/
+   /* margin-left: 100px;
+    max-width: 200px;*/
+    padding-left: 0px;
+    max-width: 200px;
+    /*max-height: 50px;*/
+    text-align: center;
+}
+
+li a {
+   display: block;
+    color: white;
+    /*margin: auto;*/
+
+    text-align: center;
+   padding: 10px 30px;
+    text-decoration: none;
+
+}
+
+/*
+li a:hover {
+    color: grey;
+    text-decoration: none;
+}
+
+*/
+/*ul li {
+    display: inline;
+    text-decoration: none;
+
+}
+
+/*ul li:hover {
+    background: #333;
+}*/
+/*
+ul li:hover ul {
+    display: block;
+    padding: auto;
+align-content: center;}
+
+ul li ul {
+    position: absolute;
+    width: 95px;
+    display: none;
+}*/
+/*
+ul li ul li {
+    display: block;
+}*/
+/*
+ul li ul li:hover {
+    text-decoration: underline;
+}
+*//*
+ul li ul li a {
+    display: block;
+}
+*/
+
+
+
+
+/******* Sociala Medier *******/
 .logoer{
    /* position: absolute; */
    /* top: 245px;*/
@@ -52,79 +138,6 @@ header {
 }
 
 
-/* NAV BAR */
-
-nav{
-    margin-bottom: -25px;
-    }
-/*nav ul{
-border-bottom: 70px;
-}*/
-
-/* UL/LI */
-
-ul{
-    list-style-type: none;
-    padding: 20px;
-    margin-bottom: 0;
-    overflow: hidden;
-    background-color: black;
-}
-
-/*li {
-    float: left;
-}*/
-
-li a {
-   display: inline;
-    color: white;
-    margin: auto;
-    text-align: center;
-    padding: 10px 40px 0px 40px;
-    text-decoration: none;
-
-}
-
-
-li a:hover {
-    color: grey;
-    text-decoration: none;
-}
-
-
-ul li {
-    display: inline;
-    text-decoration: none;
-
-}
-
-/*ul li:hover {
-    background: #333;
-}*/
-
-ul li:hover ul {
-    display: block;
-    padding: auto;
-align-content: center;}
-
-ul li ul {
-    position: absolute;
-    width: 95px;
-    display: none;
-}
-/*
-ul li ul li {
-    display: block;
-}*/
-/*
-ul li ul li:hover {
-    text-decoration: underline;
-}
-*//*
-ul li ul li a {
-    display: block;
-}
-*/
 
 /* Hovedinnhold */
 
