--- a/main.css
+++ b/main.css
@@ -27,6 +27,40 @@ body {
 
 /******* NAV BAR **********/
 
+
+nav {
+    text-align: center;
+    padding: 0px 5px 10px;
+    margin: 20px 0 -25px;
+    background-color: black
+}
+
+nav ul {
+    list-style: none;
+    margin: 0 10px;
+    padding: 0;
+}
+
+nav li{
+    display: inline-block;
+    /* gör att de dyker upp i rad med varandra */
+    padding-left: 100px;
+    margin: 0 auto;
+}
+
+li a{
+    display: block;
+    color: white;
+    padding: 5px 10px;
+    text-decoration: none;
+}
+
+li a:hover{
+    background: gray;
+}
+
+/*
+
 nav{
     margin-bottom: -25px;
     text-align: center;
@@ -48,22 +82,22 @@ li{
     /*margin-left: 10px;*/
    /* margin-left: 100px;
     max-width: 200px;*/
-    padding-left: 0px;
+ /*   padding-left: 0px;
     max-width: 200px;
     /*max-height: 50px;*/
-    text-align: center;
-}
-
+/*    text-align: center;
+} */
+/*
 li a {
    display: block;
     color: white;
     /*margin: auto;*/
 
-    text-align: center;
+  /*  text-align: center;
    padding: 10px 30px;
     text-decoration: none;
 
-}
+}*/
 
 /*
 li a:hover {
@@ -198,6 +232,7 @@ footer {
     right: 400px;
     text-align: center;
     padding: 30px;
+    background-color: black;
 }
 
 #img {
