--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body {
 
 nav {
     text-align: center;
-    padding: 0px 5px 10px;
+    padding: 0px 5px 0px;
     margin: 20px 0 -25px;
     background-color: black
 }
@@ -51,8 +51,9 @@ nav li{
 li a{
     display: block;
     color: white;
-    padding: 5px 10px;
+    padding: 0px 20px 0px 20px;
     text-decoration: none;
+    line-height: 45px;
 }
 
 li a:hover{
