--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ nav ul {
 nav li{
     display: inline-block;
     /* gör att de dyker upp i rad med varandra */
-    padding-left: 100px;
+    padding-left: 10px;
     margin: 0 auto;
 }
 
@@ -54,6 +54,7 @@ li a{
     padding: 0px 20px 0px 20px;
     text-decoration: none;
     line-height: 45px;
+    margin: 0 auto;
 }
 
 li a:hover{
