--- a/main.css
+++ b/main.css
@@ -8,46 +8,32 @@ body {
     padding: 0px;
     margin: auto 10%;
 }
-
-/*#wrapper {
+#wrapper {
     width: 980px;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
     background-color: #FFFFFF;
-}*/
-
-/******** LOGO *******/
-#logo {
-    display: block;
-    max-width: 400px;
-    margin: 0 auto;
 }
 
-
-/******* NAV BAR **********/
-
-
+/* NAV BAR */
 nav {
     text-align: center;
     padding: 0px 5px 0px;
     margin: 20px 0 -25px;
     background-color: black
+    /* margin-bottom: -25px; */
 }
-
 nav ul {
     list-style: none;
     margin: 0 10px;
     padding: 0;
 }
-
 nav li{
-    display: inline-block;
-    /* gör att de dyker upp i rad med varandra */
+    display: inline-block; /* gör att de dyker upp i rad med varandra */
     padding-left: 10px;
     margin: 0 auto;
 }
-
 li a{
     display: block;
     color: white;
@@ -60,97 +46,100 @@ li a{
 li a:hover{
     background: gray;
 }
-
-/*
-
-nav{
-    margin-bottom: -25px;
-    text-align: center;
+header {
+    display: block;
+    background-color: white;
+    color: white;
+    padding: 20px;
 }
 
+/* Footer */
+.mainFooter {
+    margin-top: 100px;
+    background-color: black;
+    color: white;
+}
+footer {
+    float: center;
+    clear: both;
+    top: 100px;
+    right: 400px;
+    text-align: center;
+    background-color: black;
+    padding: 0px 5px 0px;
+    margin: 20px 0 -25px;
+}
+/*
 ul{
-display: block;
+    display: block;
     list-style-type: none;
     padding-top: -45px;
     margin: 0;
     overflow: hidden;
     background-color: black;
-    
 }
-
 li{
     display: inline-block;
-    /*float: left;*/
-    /*margin-left: 10px;*/
-   /* margin-left: 100px;
-    max-width: 200px;*/
- /*   padding-left: 0px;
+    float: left;
+    margin-left: 10px;
+    margin-left: 100px;
     max-width: 200px;
-    /*max-height: 50px;*/
-/*    text-align: center;
-} */
-/*
+    padding-left: 0px;
+    max-width: 200px;
+    max-height: 50px;
+    text-align: center;
+} 
 li a {
-   display: block;
+    display: block;
     color: white;
-    /*margin: auto;*/
+    margin: auto;
 
-  /*  text-align: center;
-   padding: 10px 30px;
+    text-align: center;
+    padding: 10px 30px;
     text-decoration: none;
-
-}*/
-
-/*
+}
 li a:hover {
     color: grey;
     text-decoration: none;
 }
-
-*/
-/*ul li {
+ul li {
     display: inline;
     text-decoration: none;
-
 }
-
-/*ul li:hover {
+ul li:hover {
     background: #333;
-}*/
-/*
+}
 ul li:hover ul {
     display: block;
     padding: auto;
-align-content: center;}
-
+    align-content: center;
+}
 ul li ul {
     position: absolute;
     width: 95px;
     display: none;
-}*/
-/*
+}
 ul li ul li {
     display: block;
-}*/
-/*
+}
 ul li ul li:hover {
     text-decoration: underline;
 }
-*//*
 ul li ul li a {
     display: block;
 }
 */
 
-
-
-
-/******* Sociala Medier *******/
+/* Sociala Medier */
 .logoer{
-   /* position: absolute; */
-   /* top: 245px;*/
+   /* position: absolute;
+   top: 245px;*/
 }
-
+#logo {
+    display: block;
+    max-width: 400px;
+    margin: 0 auto;
+}
 #facelogo {
     width: 50px;
     right: 390px;
@@ -166,18 +155,7 @@ ul li ul li a {
     right: 300px;
 }
 
-header {
-    display: block;
-    background-color: white;
-    color: white;
-    padding: 20px;
-}
-
-
-
 /* Hovedinnhold */
-
-
 /*.sideContent
 {
     float: right;
@@ -185,8 +163,6 @@ header {
     width: 30%;
         
 }*/
-
-
 .mainContent {
     margin: 0 100px;
     width: 30%;
@@ -195,57 +171,32 @@ header {
     padding: 100px;
     align-content: center;
 }
-
 p {
     margin-bottom: 40px;
 }
-
 article a {
     color: grey;
     text-decoration: none;
 }
-
 .av {
     color: black;
     text-decoration: underline;
 }
-
 article {
     float: center;
 }
-
 hr {
     margin 50px;
     clear: both;
     border-color: #ccc;
 }
-
-.mainFooter {
-    margin-top: 100px;
-    background-color: black;
-    color: white;
-}
-
-footer {
-    float: center;
-    margin: 0 20px;
-    clear: both;
-    top: 100px;
-    right: 400px;
-    text-align: center;
-    padding: 30px;
-    background-color: black;
-}
-
 #img {
     vertical-align: baseline;
 }
-
 .me {
     float: left;
     margin: 0 10px 10px 0;
 }
-
 
 /* Slideshow */
 
@@ -254,7 +205,6 @@ footer {
     margin-left: auto;
     margin-right: auto;
 }
-
 .Slides {
     height: 481px;
     margin-left: auto;
@@ -262,25 +212,20 @@ footer {
     width: 100%;
 }
 
-#SlidesButtons
 /* Knapper vil ikke flytte på seg, mulig det er noe med koden over */
-
+#SlidesButtons
 {
     margin-left: auto;
     margin-right: auto;
 }
-
 #SlidesButtons * {
     display: inline;
     position: relative;
 }
-
 .SlidesBtnPrev {
     margin-left: auto;
     margin-right: auto;
 }
-
-
 /*
 .SlidesBtnNext
 {
@@ -292,7 +237,6 @@ footer {
     text-align: center;
 }
 */
-
 
 /* Event card */
 
