--- a/main.css
+++ b/main.css
@@ -17,41 +17,77 @@ body {
 }
 
 /* NAV BAR */
-nav {
-    text-align: center;
-    padding: 0px 5px 0px;
-    margin: 20px 0 -25px;
-    background-color: black
-    /* margin-bottom: -25px; */
-}
-nav ul {
-    list-style: none;
-    margin: 0 10px;
+/* NAV BAR */
+
+
+/*#box{
+  width: 100%;
+   margin-left: 0;
+  margin-right: 0;
+  display: inline-block;
+  background: #000; 
+      /*border-radius: 5px;*/
+
+    
+/*}*/
+
+nav > ul {
+    float: left;
+  list-style: none;
     padding: 0;
+  width: 100%;
+      background: #000; 
+margin: 0;
+  align-content: center;
+  /*border-radius: 5px;*/
+    
 }
-nav li{
-    display: inline-block; /* gör att de dyker upp i rad med varandra */
-    padding-left: 10px;
-    margin: 0 auto;
+nav > ul > li {
+  float: left;
+  list-style: inline-block;
+  width: 25%;
+    padding-left: 0;
+    padding-right: 0;
+  height: 65px;
+  line-height: 65px;
+  position: relative;
+  text-transform: uppercase;
+    text-align: center;
+  font-size: 14px;
+  color: rgba(255,255,255, 0.9);
+  cursor: pointer;
 }
-li a{
-    display: block;
-    color: white;
-    padding: 0px 20px 0px 20px;
-    text-decoration: none;
-    line-height: 45px;
-    margin: 0 auto;
+nav > ul > li:hover {
+  background: #d5d5d5;
+/*  border-radius: 0px;*/
 }
 
-li a:hover{
-    background: gray;
+ul.drop-menu {
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  padding: 0;
 }
-header {
-    display: block;
-    background-color: white;
-    color: white;
-    padding: 20px;
+ul.drop-menu li {
+  background: #666;
+  color: rgba(255, 255, 255, 0.7);
 }
+ul.drop-menu li:hover {
+  background: #606060;
+}
+ul.drop-menu li:last-child {
+  border-radius: 0px 0px 5px 5px;
+}
+
+ul.drop-menu li {
+  display: none;
+}
+
+li:hover > ul.drop-menu li {
+  display: block;
+}
+
 
 /* Footer */
 .mainFooter {
