--- a/main.css
+++ b/main.css
@@ -171,14 +171,16 @@ ul li ul li a {
 
 /* Sociala Medier */
 .logoer{
-   /* position: absolute;
-   top: 245px;*/
+    width: 40px;
+    height: 40px;
+    margin: 0 5px;
 }
 #logo {
     display: block;
     max-width: 400px;
     margin: 0 auto;
 }
+/*
 #facelogo {
     width: 50px;
     right: 390px;
@@ -193,6 +195,7 @@ ul li ul li a {
     width: 30px;
     right: 300px;
 }
+*/
 
 /* Hovedinnhold */
 /*.sideContent
