--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ nav > ul > li {
   text-transform: uppercase;
     text-align: center;
   font-size: 14px;
-  color: rgba(255,255,255, 0.9);
+  color: #FFF/*rgba(255,255,255, 0.9)*/;
   cursor: pointer;
 }
 nav > ul > li:hover {
