Bruker-side, lag event i nettside, slett events
Ny underside: user.php, logg inn, logg ut, lag nytt event
Login, logut flyttet fra testside.php
Store-test.php og new-test.php byttet navn til new-/store-event.php
Fjernet login fra search-results
delete.php endret til delete-event og delete-article
La til koder for å slette event i event.php, endret link til
delete-article.php i article.php
Gjemt link øverst til høyre (fixed) til user.php

--- a/main.css
+++ b/main.css
@@ -8,13 +8,22 @@ body {
     padding: 0px;
     margin: auto 10%;
 }
-/* wrapper deaktivert i header.php */
+/* wrapper deaktivert i header.php OOPS: zoom med/uten wrapper */
 #wrapper {
     width: 980px;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
     background-color: #FFFFFF;
+}
+#hidden-link /* Div for link til user.php, aka. login/admin */
+{
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    top: 1px;
+    right: 1px;
 }
 
 /* NAV BAR */
