--- a/main.css
+++ b/main.css
@@ -4,29 +4,196 @@ body {
     text-align: left;
     font-size: 1em;
     line-height: 1.5;
-    position: relative;
-    padding: 20px;
+    /*position: relative; */
+    padding: 0px;
     margin: auto 10%;
 }
-
-/*#wrapper {
+/* wrapper deaktivert i header.php OOPS: zoom med/uten wrapper */
+#wrapper {
     width: 980px;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
     background-color: #FFFFFF;
-}*/
+}
+#hidden-link /* Div for link til user.php, aka. login/admin */
+{
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    top: 1px;
+    right: 1px;
+}
 
-#logo {
-    left: 300px;
+/* NAV BAR */
+
+/*#box{
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    display: inline-block;
+    background: #000; 
+    /*border-radius: 5px;*/
+
+/*}*/
+nav > ul {
+    float: left;
+    list-style: none;
+    padding: 0;
+    width: 100%;
+    background: #000; 
+    margin: 0;
+    align-content: center;
+    /*border-radius: 5px;*/
+    
+}
+nav > ul > li {
+    float: left;
+    list-style: inline-block;
+    width: 16.666667%; /* 5 elementer i navbaren = 20% */
+    padding-left: 0;
+    padding-right: 0;
+    height: 65px;
+    line-height: 65px;
     position: relative;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 14px;
+    color: #FFF/*rgba(255,255,255, 0.9)*/;
+    cursor: pointer;
 }
-
-.logoer{
+nav > ul > li:hover {
+    background: #777;
+    color: orange;
+/*  border-radius: 0px;*/
+}
+nav > ul > a:hover {
+    background: #777;
+    color: orange;
+    text-emphasis-color: orange;
+    text-decoration-color: orange;
+/*  border-radius: 0px;*/
+}
+ul.drop-menu {
     position: absolute;
-    top: 245px;
+    top: 100%;
+    left: 0%;
+    width: 100%;
+    padding: 0;
+}
+ul.drop-menu li {
+      background: #FFF;
+      color: rgba(0,0,0,1);
+}
+ul.drop-menu li:hover {
+      background: #000;
+      color: white;
+}
+ul.drop-menu li:last-child {
+    border-radius: 0px 0px 5px 5px;
 }
 
+ul.drop-menu li {
+    display: none;
+}
+
+li:hover > ul.drop-menu li {
+    display: block;
+}
+
+
+/* Footer */
+    .mainFooter {
+    margin-top: 100px;
+    background-color: black;
+    color: white;
+}
+footer {
+    float: center;
+    clear: both;
+    top: 100px;
+    right: 400px;
+    text-align: center;
+    padding: 30px;
+    background-color: black;
+}
+#footertext{
+    color: white;
+}
+/*
+ul{
+    display: block;
+    list-style-type: none;
+    padding-top: -45px;
+    margin: 0;
+    overflow: hidden;
+    background-color: black;
+}
+li{
+    display: inline-block;
+    float: left;
+    margin-left: 10px;
+    margin-left: 100px;
+    max-width: 200px;
+    padding-left: 0px;
+    max-width: 200px;
+    max-height: 50px;
+    text-align: center;
+} 
+li a {
+    display: block;
+    color: white;
+    margin: auto;
+
+    text-align: center;
+    padding: 10px 30px;
+    text-decoration: none;
+}
+li a:hover {
+    color: grey;
+    text-decoration: none;
+}
+ul li {
+    display: inline;
+    text-decoration: none;
+}
+ul li:hover {
+    background: #333;
+}
+ul li:hover ul {
+    display: block;
+    padding: auto;
+    align-content: center;
+}
+ul li ul {
+    position: absolute;
+    width: 95px;
+    display: none;
+}
+ul li ul li {
+    display: block;
+}
+ul li ul li:hover {
+    text-decoration: underline;
+}
+ul li ul li a {
+    display: block;
+}
+*/
+
+/* Sociala Medier */
+.logoer{
+    width: 40px;
+    height: 40px;
+    margin: 0 5px;
+}
+#logo {
+    display: block;
+    max-width: 400px;
+    margin: 0 auto;
+}
+/*
 #facelogo {
     width: 50px;
     right: 390px;
@@ -41,91 +208,9 @@ body {
     width: 30px;
     right: 300px;
 }
-
-header {
-    display: block;
-    background-color: white;
-    color: white;
-    padding: 20px;
-}
-
-/* NAV BAR */
-
-nav{
-    margin-bottom: -25px;
-    }
-/*nav ul{
-border-bottom: 70px;
-}*/
-
-/* UL/LI */
-
-ul {
-    list-style-type: none;
-   padding: 20px;
-    margin-bottom: 0;
-    overflow: hidden;
-    background-color: black;
-}
-
-/*li {
-    float: left;
-}*/
-
-li a {
-   display: inline;
-    color: white;
-    margin: auto;
-    text-align: center;
-    padding: 10px 40px 0px 40px;
-    text-decoration: none;
-
-}
-
-
-li a:hover {
-    color: grey;
-    text-decoration: none;
-}
-
-
-ul li {
-    display: inline;
-        text-decoration: none;
-
-}
-
-/*ul li:hover {
-    background: #333;
-}*/
-
-ul li:hover ul {
-    display: block;
-    padding: auto;
-align-content: center;}
-
-ul li ul {
-    position: absolute;
-    width: 95px;
-    display: none;
-}
-/*
-ul li ul li {
-    display: block;
-}*/
-/*
-ul li ul li:hover {
-    text-decoration: underline;
-}
-*//*
-ul li ul li a {
-    display: block;
-}
 */
 
 /* Hovedinnhold */
-
-
 /*.sideContent
 {
     float: right;
@@ -133,8 +218,6 @@ ul li ul li a {
     width: 30%;
         
 }*/
-
-
 .mainContent {
     margin: 0 100px;
     width: 30%;
@@ -143,56 +226,32 @@ ul li ul li a {
     padding: 100px;
     align-content: center;
 }
-
 p {
     margin-bottom: 40px;
 }
-
 article a {
     color: grey;
     text-decoration: none;
 }
-
 .av {
     color: black;
     text-decoration: underline;
 }
-
 article {
     float: center;
 }
-
 hr {
     margin 50px;
     clear: both;
     border-color: #ccc;
 }
-
-.mainFooter {
-    margin-top: 100px;
-    background-color: black;
-    color: white;
-}
-
-footer {
-    float: center;
-    margin: 0 20px;
-    clear: both;
-    top: 100px;
-    right: 400px;
-    text-align: center;
-    padding: 30px;
-}
-
 #img {
     vertical-align: baseline;
 }
-
 .me {
     float: left;
     margin: 0 10px 10px 0;
 }
-
 
 /* Slideshow */
 
@@ -201,7 +260,6 @@ footer {
     margin-left: auto;
     margin-right: auto;
 }
-
 .Slides {
     height: 481px;
     margin-left: auto;
@@ -209,25 +267,20 @@ footer {
     width: 100%;
 }
 
-#SlidesButtons
 /* Knapper vil ikke flytte på seg, mulig det er noe med koden over */
-
+#SlidesButtons
 {
     margin-left: auto;
     margin-right: auto;
 }
-
 #SlidesButtons * {
     display: inline;
     position: relative;
 }
-
 .SlidesBtnPrev {
     margin-left: auto;
     margin-right: auto;
 }
-
-
 /*
 .SlidesBtnNext
 {
@@ -239,7 +292,6 @@ footer {
     text-align: center;
 }
 */
-
 
 /* Event card */
 
