--- a/main.css
+++ b/main.css
@@ -3,20 +3,39 @@ body {
     font-family: Arial, Verdana, Comic Sans;
     text-align: left;
     font-size: 1em;
-    line-height: 1.5;
+   line-height: 1.5;
     /*position: relative; */
-    padding: 0px;
-    margin: auto 10%;
+  /*  padding: 0px;
+    margin: auto 10%;*/
 }
+
+
 /* wrapper deaktivert i header.php OOPS: zoom med/uten wrapper */
-#wrapper {
-    width: 980px;
+
+.box {
+    width: 70%;
     text-align: left;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #FFFFFF;
+    margin: 0 auto;
+  /*  margin-left: auto;
+    margin-right: auto;*/
+   /* background-color: #FFFFFF;*/
 }
-#hidden-link /* Div for link til user.php, aka. login/admin */
+
+.name{
+    
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.main-header{
+    background: black;
+    padding: 3.5em 0;
+    margin-top: 4em 0 4em;
+}
+
+#hidden-link
+/* Div for link til user.php, aka. login/admin */
+
 {
     position: fixed;
     width: 100px;
@@ -26,7 +45,9 @@ body {
     right: 1px;
 }
 
+
 /* NAV BAR */
+
 
 /*#box{
     width: 100%;
@@ -36,45 +57,54 @@ body {
     background: #000; 
     /*border-radius: 5px;*/
 
+
 /*}*/
-nav > ul {
+
+nav>ul {
     float: left;
     list-style: none;
     padding: 0;
     width: 100%;
-    background: #000; 
+    background: #000;
     margin: 0;
     align-content: center;
     /*border-radius: 5px;*/
-    
 }
-nav > ul > li {
+
+nav>ul>li {
     float: left;
     list-style: inline-block;
-    width: 16.666667%; /* 5 elementer i navbaren = 20% */
+    width: 16.666667%;
+    /* 5 elementer i navbaren = 20% */
     padding-left: 0;
     padding-right: 0;
-    height: 65px;
-    line-height: 65px;
+    padding-bottom: 0;
+    height: 3em/*65px*/;
+    line-height: 4em/*65px*/;
     position: relative;
     text-transform: uppercase;
     text-align: center;
     font-size: 14px;
-    color: #FFF/*rgba(255,255,255, 0.9)*/;
+    color: #FFF/*rgba(255,255,255, 0.9)*/
+    ;
     cursor: pointer;
 }
-nav > ul > li:hover {
+
+nav>ul>li:hover {
     background: #777;
+    height: 4em;
     color: orange;
-/*  border-radius: 0px;*/
+    /*  border-radius: 0px;*/
 }
-nav > ul > a:hover {
+
+nav>ul>a:hover {
     background: #777;
-    color: orange;
+   /* color: orange;
     text-emphasis-color: orange;
     text-decoration-color: orange;
-/*  border-radius: 0px;*/
+    /*  border-radius: 0px;*/
 }
+
 ul.drop-menu {
     position: absolute;
     top: 100%;
@@ -82,14 +112,17 @@ ul.drop-menu {
     width: 100%;
     padding: 0;
 }
+
 ul.drop-menu li {
-      background: #FFF;
-      color: rgba(0,0,0,1);
+    background: #FFF;
+    color: rgba(0, 0, 0, 1);
 }
+
 ul.drop-menu li:hover {
-      background: #000;
-      color: white;
+    background: #000;
+    color: white;
 }
+
 ul.drop-menu li:last-child {
     border-radius: 0px 0px 5px 5px;
 }
@@ -98,17 +131,19 @@ ul.drop-menu li {
     display: none;
 }
 
-li:hover > ul.drop-menu li {
+li:hover>ul.drop-menu li {
     display: block;
 }
 
 
 /* Footer */
-    .mainFooter {
+
+.mainFooter {
     margin-top: 100px;
     background-color: black;
     color: white;
 }
+
 footer {
     float: center;
     clear: both;
@@ -118,9 +153,12 @@ footer {
     padding: 30px;
     background-color: black;
 }
-#footertext{
+
+#footertext {
     color: white;
 }
+
+
 /*
 ul{
     display: block;
@@ -182,17 +220,22 @@ ul li ul li a {
 }
 */
 
+
 /* Sociala Medier */
-.logoer{
+
+.logoer {
     width: 40px;
     height: 40px;
     margin: 0 5px;
 }
+
 #logo {
     display: block;
     max-width: 400px;
     margin: 0 auto;
 }
+
+
 /*
 #facelogo {
     width: 50px;
@@ -210,7 +253,10 @@ ul li ul li a {
 }
 */
 
+
 /* Hovedinnhold */
+
+
 /*.sideContent
 {
     float: right;
@@ -218,6 +264,15 @@ ul li ul li a {
     width: 30%;
         
 }*/
+
+/**** LINKS ***/
+a:link, a:visited{
+text-decoration: none;
+    color: white;
+    }  
+
+/*****************/
+
 .mainContent {
     margin: 0 100px;
     width: 30%;
@@ -226,32 +281,40 @@ ul li ul li a {
     padding: 100px;
     align-content: center;
 }
+
 p {
     margin-bottom: 40px;
 }
+
 article a {
     color: grey;
     text-decoration: none;
 }
+
 .av {
     color: black;
     text-decoration: underline;
 }
+
 article {
     float: center;
 }
+
 hr {
     margin 50px;
     clear: both;
     border-color: #ccc;
 }
+
 #img {
     vertical-align: baseline;
 }
+
 .me {
     float: left;
     margin: 0 10px 10px 0;
 }
+
 
 /* Slideshow */
 
@@ -260,6 +323,7 @@ hr {
     margin-left: auto;
     margin-right: auto;
 }
+
 .Slides {
     height: 481px;
     margin-left: auto;
@@ -267,20 +331,25 @@ hr {
     width: 100%;
 }
 
+
 /* Knapper vil ikke flytte på seg, mulig det er noe med koden over */
-#SlidesButtons
-{
+
+#SlidesButtons {
     margin-left: auto;
     margin-right: auto;
 }
+
 #SlidesButtons * {
     display: inline;
     position: relative;
 }
+
 .SlidesBtnPrev {
     margin-left: auto;
     margin-right: auto;
 }
+
+
 /*
 .SlidesBtnNext
 {
@@ -292,6 +361,7 @@ hr {
     text-align: center;
 }
 */
+
 
 /* Event card */
 
