ändrade så att search funktionen inte har någon hover bakgrund

--- a/main.css
+++ b/main.css
@@ -116,7 +116,10 @@ li:hover > ul.drop-menu li {
     display: block;
 }
 
-
+#search:hover{
+    
+    background: #000;
+}
 /* Footer */
  /*   .mainFooter {
     margin-top: 100px;
