--- a/main.css
+++ b/main.css
@@ -317,3 +317,9 @@ hr {
 #event-image {
     top: 0;
 }
+
+.article-shadow {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+}
