--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
     text-align: left;
     font-size: 1em;
     line-height: 1.5;
+    margin: 0;
     /*position: relative; */
   /*  padding: 0px;
     margin: auto 10%; */
