Gör att bildernas storlek förändras efterhand som bilden storleken för hemsidan förändras

--- a/main.css
+++ b/main.css
@@ -279,7 +279,8 @@ hr {
     margin-right: auto;
 }
 .Slides {
-    height: 481px;
+    height: auto ;/*481px;*/ /* Gör att bilden hamnar i storlek utifrån hur stor sidan är*/
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
