--- a/main.css
+++ b/main.css
@@ -199,6 +199,11 @@ nav > ul > a:hover {
     color: white;
 }
 
+/** Gör att footern stannar i botten **/
+.wrap{
+    
+    min-height: calc(100vh - 135px);
+}
 
 /********************************
 ********************************/
