--- a/main.css
+++ b/main.css
@@ -82,6 +82,7 @@ header a:visited {
 *********************************/
 
 nav > ul {
+    display: flex;
     float: left;
     list-style: none;
     padding: 0;
@@ -94,11 +95,14 @@ nav > ul {
 }
 
 nav > ul > li {
+    flex: 1 1 100%;
+    flex-wrap: wrap;
+    justify-content: space-around;
     float: left;
     list-style: inline-block;
-    width: 16.666667%; /* 5 elementer i navbaren = 20% */
-    padding-left: 0;
-    padding-right: 0;
+   /* width: 16.666667%; /* 5 elementer i navbaren = 20% */
+    padding-left: 10px;
+    padding-right: 10px;
     height: 45px;
     line-height: 45px;
     position: relative;
@@ -170,7 +174,9 @@ nav > ul > a:hover {
 
 #search-field
 {
-    width: 102.3px; 
+    width: 85.7px; 
+    padding-left: 0;
+    padding-right: 0;
 }
 
 #search:hover{
@@ -370,3 +376,17 @@ hr {
 /********************************
 ********************************/
 
+/*********************************
+**********************************
+            MOBIL SKÄRM
+**********************************
+*********************************/
+
+@media only screen and (max-width: 600px) {
+    #search-field, #search-button {
+        display: none;
+    }
+}
+
+/********************************
+********************************/
