Ändringar i skole-tabben
Har lagt till så att vi kort kan beskriva projektet och ändrat länkarna.

--- a/main.css
+++ b/main.css
@@ -386,7 +386,36 @@ hr {
     #search-field, #search-button {
         display: none;
     }
+    
+    .container{
+    flex-direction: column;
+    
+}
 }
 
 /********************************
 ********************************/
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+
+.item-1{
+max-width:  500px;
+    height: 400px;
+}
+
+.item a{
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    
+}
+
+.item a:hover{
+    color: grey;
+    text-decoration: underline;
+}
