Layout, update/new event

--- a/main.css
+++ b/main.css
@@ -21,14 +21,6 @@ body {
     background-color: #FFFFFF;
 }
 
-/********************************
-********************************/
-
-
-
-
-
-
 /*********************************
 **********************************
             HEADER
@@ -66,14 +58,6 @@ header a:visited {
     top: 1px;
     right: 1px;
 }
-
-/********************************
-********************************/
-
-
-
-
-
 
 /*********************************
 **********************************
@@ -154,13 +138,6 @@ nav > ul > a:hover {
     background: #777;
 }
 
-
-
-/********************************
-********************************/
-
-
-
 /*********************************
 **********************************
         SEARCH BAR
@@ -177,12 +154,6 @@ nav > ul > a:hover {
     
     background: #000;
 }
-
-
-/********************************
-********************************/
-
-
 
 /*********************************
 **********************************
@@ -205,12 +176,6 @@ nav > ul > a:hover {
     min-height: calc(100vh - 135px);
 }
 
-/********************************
-********************************/
-
-
-
-
 /*********************************
 **********************************
         SOCIALA MEDIER 
@@ -228,11 +193,6 @@ nav > ul > a:hover {
     margin: 0 auto;
 }
 
-/********************************
-********************************/
-
-
-
 /*********************************
 **********************************
             ARTIKLAR
@@ -246,10 +206,6 @@ p {
 article a {
     color: grey;
     text-decoration: none;
-}
-.av {
-    color: black;
-    text-decoration: underline;
 }
 article {
     float: center;
@@ -266,12 +222,6 @@ hr {
     float: left;
     margin: 0 10px 10px 0;
 }
-
-/********************************
-********************************/
-
-
-
 
 /*********************************
 **********************************
@@ -320,45 +270,46 @@ hr {
 }
 */
 
-
-/********************************
-********************************/
-
-
-
-
 /*********************************
 **********************************
             EVENTCARD
 **********************************
 *********************************/
-
-
-#EventWrapper {
-    width: 50%;
+.event-container {
+    width: 32%;
     height: 25%;
-    display: block;
 }
-
-#event-image {
-    top: 0;
+.event-inner-container {
+    padding: 0em 0.5em 1.0em 1.5em;
 }
-
+.event-shadow {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+}
+.event-image {
+    margin: auto;
+}
 .article-shadow {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
 }
-    
 .article-container {
     padding: 0em 0.5em 1.0em 1.5em;   
 }
-
-.av{
+.av {
     color: black;
     display: inline-block;
 }
-
+.event-buttons, .article-buttons {
+    margin: auto;
+    bottom: 0;
+}
+.event-buttons *, .article-buttons * {
+    display: inline;
+    text-decoration: none;
+}
 .article-btn, .event-btn {
     background-color: black;
     color: white;
@@ -366,7 +317,3 @@ hr {
     border-radius: 0.3em;
     border: none;
 }
-
-/********************************
-********************************/
-
