Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit 8bdd979eae751b71fea2ce6e79d7044be9272285, reversing
changes made to 624c3d04098491fae4b096af115bfd1b36b547a4.

--- a/main.css
+++ b/main.css
@@ -21,6 +21,14 @@ body {
     background-color: #FFFFFF;
 }
 
+/********************************
+********************************/
+
+
+
+
+
+
 /*********************************
 **********************************
             HEADER
@@ -58,6 +66,14 @@ header a:visited {
     top: 1px;
     right: 1px;
 }
+
+/********************************
+********************************/
+
+
+
+
+
 
 /*********************************
 **********************************
@@ -142,6 +158,13 @@ nav > ul > a:hover {
     background: #777;
 }
 
+
+
+/********************************
+********************************/
+
+
+
 /*********************************
 **********************************
         SEARCH BAR
@@ -160,6 +183,12 @@ nav > ul > a:hover {
     
     background: #000;
 }
+
+
+/********************************
+********************************/
+
+
 
 /*********************************
 **********************************
@@ -182,6 +211,12 @@ nav > ul > a:hover {
     min-height: calc(100vh - 135px);
 }
 
+/********************************
+********************************/
+
+
+
+
 /*********************************
 **********************************
         SOCIALA MEDIER 
@@ -199,6 +234,11 @@ nav > ul > a:hover {
     margin: 0 auto;
 }
 
+/********************************
+********************************/
+
+
+
 /*********************************
 **********************************
             ARTIKLAR
@@ -212,6 +252,10 @@ p {
 article a {
     color: grey;
     text-decoration: none;
+}
+.av {
+    color: black;
+    text-decoration: underline;
 }
 article {
     float: center;
@@ -228,6 +272,12 @@ hr {
     float: left;
     margin: 0 10px 10px 0;
 }
+
+/********************************
+********************************/
+
+
+
 
 /*********************************
 **********************************
@@ -276,46 +326,45 @@ hr {
 }
 */
 
+
+/********************************
+********************************/
+
+
+
+
 /*********************************
 **********************************
             EVENTCARD
 **********************************
 *********************************/
-.event-container {
-    width: 32%;
+
+
+#EventWrapper {
+    width: 50%;
     height: 25%;
+    display: block;
 }
-.event-inner-container {
-    padding: 0em 0.5em 1.0em 1.5em;
+
+#event-image {
+    top: 0;
 }
-.event-shadow {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-}
-.event-image {
-    margin: auto;
-}
+
 .article-shadow {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
 }
+    
 .article-container {
     padding: 0em 0.5em 1.0em 1.5em;   
 }
-.av {
+
+.av{
     color: black;
     display: inline-block;
 }
-.event-buttons, .article-buttons {
-    margin: auto;
-    bottom: 0;
-}
-.event-buttons *, .article-buttons * {
-    display: inline;
-    text-decoration: none;
-}
+
 .article-btn, .event-btn {
     background-color: black;
     color: white;
@@ -323,14 +372,11 @@ hr {
     border-radius: 0.3em;
     border: none;
 }
-<<<<<<< HEAD
 
 /********************************
 ********************************/
 
 
-=======
->>>>>>> origin/master
 /*********************************
 **********************************
             MOBIL SKÄRM
